@@ -104,11 +104,6 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
-importFrom(rbugs,genBugsScript)
-importFrom(rbugs,getBugsOutput)
-importFrom(rbugs,rbugs)
-importFrom(rbugs,rbugs2coda)
-importFrom(rbugs,runBugs)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
